--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    </ol>
 
    <img src="HTML Ninja.png" alt="Ninja" style=width:100 height=100>
-    <a href="https://res.cloudinary.com/practicaldev/image/fetch/s--XC_YBahh--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/i/jzt1yoyvsuvvu8rr4yen.png">Full Ninja</a>
+    <a href="https://res.cloudinary.com/practicaldev/image/fetch/s--XC_YBahh--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/i/jzt1yoyvsuvvu8rr4yen.png" target="blank">Full Ninja</a>
 
 </body>
 </html>
